# maa-rs

./: Cargo.toml  decode.sh  test.sh
src/: amd_kds.rs  az_tdx.rs  lib.rs  maa.rs  main.rs
test/: SnpReport  VcekCertChain  request.json  runtimeData_data
