[package]
name = "maa-snp-attest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_with = {version = "2.3", features = ["base64"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0"
sev = { git = "https://github.com/virtee/sev.git", rev = "5918d02a338cab1be3a7f16e1ad556cd6a2399f4" , features = ["snp"] }
ureq = "2"
thiserror = "1"
openssl = "0.10"
anyhow = "1"
bincode = "1"
jsonwebtoken = "8"
sha2 = "0.10"
